--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flagembedding>=1.2.11",
     "huggingface-hub>=0.25.0",
     "ipython>=9.9.0",
+    "jiwer>=4.0.0",
     "langchain>=1.2.1",
     "langchain-anthropic>=1.3.1",
     "langchain-classic>=1.0.1",
@@ -27,6 +28,8 @@ dependencies = [
     "peft>=0.13.2",
     "pillow<12",
     "pymupdf>=1.26.7",
+    "pypdf2>=3.0.1",
+    "pytesseract>=0.3.13",
     "python-dotenv>=1.2.1",
     "qdrant-client>=1.16.2",
     "redis>=7.1.0",
