--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,36 +6,47 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "accelerate>=0.31.0",
+    "alembic>=1.13.1",
     "datasets>=2.18.0",
+    "fastapi>=0.109.0",
     "fastembed>=0.3.0",
     "flagembedding>=1.2.11",
+    "gunicorn>=21.2.0",
     "huggingface-hub>=0.25.0",
     "ipython>=9.9.0",
     "jiwer>=4.0.0",
-    "langchain>=1.2.1",
+    "langchain>=0.1.0",
     "langchain-anthropic>=1.3.1",
     "langchain-classic>=1.0.1",
-    "langchain-community>=0.4.1",
+    "langchain-community>=0.0.19",
     "langchain-google-genai>=4.1.3",
     "langchain-google-vertexai>=3.2.1",
-    "langchain-openai>=1.1.7",
+    "langchain-openai>=0.0.5",
     "langchain-qdrant>=1.1.0",
     "langchain-voyageai>=0.3.1",
     "llama-parse>=0.6.89",
     "lxml>=6.0.2",
     "matplotlib-inline>=0.2.1",
     "ocrmypdf>=16.13.0",
+    "passlib[bcrypt]>=1.7.4",
     "peft>=0.13.2",
     "pillow<12",
+    "psycopg2-binary>=2.9.9",
+    "pydantic>=2.6.0",
     "pymupdf>=1.26.7",
     "pypdf2>=3.0.1",
     "pytesseract>=0.3.13",
-    "python-dotenv>=1.2.1",
+    "python-dotenv>=1.0.0",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.7",
     "qdrant-client>=1.16.2",
     "redis>=7.1.0",
     "sentence-transformers>=3.1.1",
+    "sqlalchemy>=2.0.25",
+    "supabase>=2.3.0",
     "transformers>=4.39.3",
     "unstructured-client>=0.42.6",
     "unstructured[all-docs]>=0.18.27",
+    "uvicorn>=0.27.0",
     "voyageai>=0.3.7",
 ]
