--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,6 @@ dependencies = [
     "llama-parse>=0.1.0",
     "FlagEmbedding>=1.2.8",
     "email-validator>=2.3.0",
+    "asyncpg>=0.31.0",
+    "bcrypt==4.0.1",
 ]
