--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "psycopg2-binary>=2.9.9",
     "pydantic>=2.6.0",
+    "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.7",
@@ -29,4 +30,15 @@ dependencies = [
     "email-validator>=2.3.0",
     "asyncpg>=0.31.0",
     "bcrypt==4.0.1",
+    "pytest>=8.0.0",
+    "httpx>=0.27.0",
+    "openinference-instrumentation-langchain>=0.1.58",
+    "arize-otel>=0.11.0",
+    "opentelemetry-sdk>=1.39.1",
+    "opentelemetry-exporter-otlp>=1.39.1",
+    "notebook>=7.5.2",
+    "ipykernel>=7.1.0",
+    "jupyter>=1.1.1",
+    "jupyter-client>=8.8.0",
+    "pyzmq>=27.1.0",
 ]
