--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ pydantic>=2.6.0
 python-multipart>=0.0.7
 python-telegram-bot>=21.0
 resend>=2.0.0
+PyYAML>=6.0.2
+Cython<3.0
+setuptools>=70.0.0
+wheel>=0.40.0
