--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-PyYAML>=6.0.2
+# Build dependencies (must be first to avoid source builds)
+PyYAML==6.0.2
 Cython<3.0
 setuptools>=70.0.0
 wheel>=0.40.0
+
+# Core framework
 fastapi>=0.109.0
 uvicorn>=0.27.0
+starlette>=0.27.0
+
+# Database and storage
 supabase>=2.3.0
-python-dotenv>=1.0.0
 qdrant-client>=1.7.0
-langchain>=0.1.0
-langchain-community>=0.0.19
-langchain-google-genai>=0.0.6
-langchain-voyageai>=0.1.0
+
+# LangChain ecosystem (pinned to compatible versions)
+langchain>=0.3.0,<0.4.0
+langchain-core>=0.3.0,<0.4.0
+langchain-community>=0.3.0,<0.4.0
+langchain-google-genai>=2.0.0,<3.0.0
+langchain-voyageai>=0.1.0,<0.2.0
 voyageai>=0.1.3
+
+# AI/ML
 FlagEmbedding>=1.2.8
+
+# Utilities
+python-dotenv>=1.0.0
 pydantic>=2.6.0
 python-multipart>=0.0.7
 python-telegram-bot>=21.0
