--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ starlette>=0.27.0
 # Database and storage
 supabase>=2.3.0
 qdrant-client>=1.7.0
+sqlalchemy>=2.0.25
 
 # LangChain ecosystem (pinned to compatible versions)
 langchain>=0.3.0,<0.4.0
@@ -24,10 +25,17 @@ voyageai>=0.1.3
 # AI/ML
 FlagEmbedding>=1.2.8
 
+# Authentication
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
+
 # Utilities
 python-dotenv>=1.0.0
 pydantic>=2.6.0
+pydantic-settings>=2.0.0
 python-multipart>=0.0.7
 python-telegram-bot>=21.0
 resend>=2.0.0
-python-jose[cryptography]>=3.3.0
+httpx>=0.27.0
+email-validator>=2.3.0
