--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Build dependencies (must be first to avoid source builds)
+# Build dependencies
 PyYAML==6.0.2
 Cython<3.0
 setuptools>=70.0.0
@@ -9,12 +9,13 @@ fastapi>=0.109.0
 uvicorn>=0.27.0
 starlette>=0.27.0
 
-# Database and storage
+# Database
 supabase>=2.3.0
 qdrant-client>=1.7.0
 sqlalchemy>=2.0.25
+psycopg2-binary>=2.9.9
 
-# LangChain ecosystem (pinned to compatible versions)
+# LangChain
 langchain>=0.3.0,<0.4.0
 langchain-core>=0.3.0,<0.4.0
 langchain-community>=0.3.0,<0.4.0
@@ -30,12 +31,16 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 bcrypt==4.0.1
 
+# Telegram
+python-telegram-bot>=21.0
+
 # Utilities
 python-dotenv>=1.0.0
 pydantic>=2.6.0
 pydantic-settings>=2.0.0
 python-multipart>=0.0.7
-python-telegram-bot>=21.0
 resend>=2.0.0
 httpx>=0.27.0
 email-validator>=2.3.0
+python-dateutil>=2.8.0
+sympy>=1.12
