--- a/Dockerfile.telegram
+++ b/Dockerfile.telegram
@@ -1,3 +1,4 @@
+# Telegram Bot Dockerfile for Railway deployment
 # Use Python 3.12 slim image
 FROM python:3.12-slim
 
@@ -11,20 +12,19 @@ ENV PYTHONUNBUFFERED=1
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
-COPY requirements.txt .
+COPY requirements-telegram.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements-telegram.txt
 
-# Copy the application code
-COPY . .
+# Copy only necessary application code
+COPY Backend/ Backend/
+COPY main.py .
 
-# Expose port (Railway uses dynamic PORT)
-EXPOSE 8000
-
-# Run the application with Railway's PORT env variable
-CMD uvicorn Backend.app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Run the Telegram bot in polling mode
+CMD ["python", "-m", "Backend.app.services.telegram_bot"]
